--- a/popup.html
+++ b/popup.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./css/popup.css">
 </head>
 <body>
-    <div class="main">
-        <h3>Your Issue:</h3>
-        <div class="content">
-            
-        </div>
-    </div>
+    <style>
+        .main {
+            font: 14px Helvetica, Arial;
+            width: 310px;
+            height: 40px;
+            line-height: 40px;
+            background-color: #96D986;
+            color: #fff;
+            text-align: center;
+        }
+    </style>
 
-    <script src="./js/jquery.js"></script>
-    <script src="./js/popup.js"></script>
+    <p class="main">A chrome extension to save your github issue automatically!</p>
+
 </body>
 </html>
